# goated

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  cny_usd.csv  ev_commodity_prices.csv  indexAndBasket.csv  inr_usd.csv  lithium_carbonate_cny.csv  nickel_mcx_inr.csv  pyproject.toml
BRLUSD-PROJ/: prompt_stack.md
analysis/: lip_viability.py
attribution/: pnl.py
audit/: audit_A_cartography.md  audit_B_engine-calendar.md  audit_B_engine-pricer.md  audit_B_engine-scheduler.md  audit_B_feeds-pyth.md  audit_B_models-gbm.md  audit_B_models-registry.md  audit_B_state-market-surfaces.md  audit_B_state-tick-store.md  audit_B_validation-sanity.md  audit_C_phase01_market_structure.md  audit_C_phase02_pricing_models.md  audit_C_phase03_tooling.md  audit_C_phase04_discretionary.md  audit_C_phase05_systematic.md  audit_C_phase06_data_streams.md  audit_C_phase07_kalshi_contract.md  audit_C_phase08_synthesis_pricing.md  audit_C_phase09_kalshi_stack.md  audit_C_phase10_strategy_synthesis.md  audit_D_backtest.md  audit_D_contract.md  audit_D_data_ingest.md  audit_D_density.md  audit_D_hedging.md  audit_D_inventory.md  audit_D_observability.md  audit_D_oms.md  audit_D_pricing_model.md  audit_D_strategy.md  audit_E_gap_register.md  audit_F2_refactor_plan_mm_program.md  audit_F3_refactor_plan_lip.md  audit_F4_refactor_plan_asymmetric_mm.md  audit_F_refactor_plan.md
benchmarks/: harness.py  run.py
config/: commodities.yaml  pyth_feeds.yaml
deploy/: README.md  README_quickstart.md  _stub_theo.py  config.yaml  config_lip.yaml  config_test.yaml  dashboard.py  exploit_quick.py  lip_mode.py  lipmm_run.py  main.py  truev_backtest.py  truev_backtest_csv.py  truev_fit_weights.py  truev_reanchor.py  truev_smoke.py  truev_wait_and_reanchor.py
docs/: API.md  CLUB_DISTRIBUTION.md  DASHBOARD.md  lip_runbook.md
engine/: cbot_settle.py  corridor.py  decision_logger.py  event_calendar.py  goldman_roll.py  implied_vol.py  kill.py  markout.py  pricer.py  quoter.py  risk.py  scheduler.py  seasonal_vol.py  settlement_gate.py  sticky_quote.py  taker_imbalance.py  wasde_density.py  weather_skew.py
feeds/: pyth_ws.py
fees/: __init__.py  kalshi_fees.py
hedge/: __init__.py  delta_aggregator.py  ibkr_client.py  sizer.py  trigger.py
interface-overhaul/: comps.jsx  data.jsx  lipmm dashboard redesign.html  lipmm-redesign.html  primitives.jsx
lipmm/: __init__.py
models/: base.py  gbm.py  registry.py
prompts/: 00_BOOT.md  01_WAVE_PLANNER.md  02_ACTION_IMPLEMENT.md  03_ACTION_VERIFY.md  (+9 more)
(+392 files in other folders)
